--- a/css/style.css
+++ b/css/style.css
@@ -650,6 +650,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: black
 }
 
+#facts .about-container .icon-box .text {
+  font-weight: lighter
+}
+
 /* Services Section
 --------------------------------*/
 #services {
@@ -869,6 +873,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding: 80px 0 60px 0;
 }
 
+#team .card {
+  /* padding: 10px; */
+}
+
 #team .member {
   text-align: center;
   margin-bottom: 20px;
@@ -882,6 +890,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #team .member .pic img {
   max-width: 100%;
+}
+
+#team .member .pic:hover img {
+  box-shadow:0 0 5px #fff;
 }
 
 #team .member h4 {
@@ -912,6 +924,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 18px;
   margin: 0 2px;
 }
+
 
 /*--------------------------------------------------------------
 # Footer
